--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+2
+  flutter_swiper: ^1.1.4
+  dio: ^3.0.0
 
 dev_dependencies:
   flutter_test:
